fix: add overflow visible to svgs in buttons

--- a/src/components/carousel/carousel.module.scss
+++ b/src/components/carousel/carousel.module.scss
@@ -27,6 +27,7 @@
     cursor: pointer;
 
     svg {
+      overflow: visible;
       color: var(--color-dark);
       width: 1.1rem;
       height: 1.3rem;
